// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DbStore Create Test: multi added and loaded 1`] = `
<div>
  {
  "value": [
    "b29999999999999999498765",
    "b29999999999999999798765"
  ],
  "relatedObject": [
    {
      "guestName": "myText 4",
      "myVal": 424,
      "_id": "b29999999999999999498765"
    },
    {
      "guestName": "myText 7",
      "myVal": 427,
      "_id": "b29999999999999999798765"
    }
  ],
  "searchForm": {
    "title": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "properties": {
      "guestName": {
        "title": "guestName",
        "type": "string"
      },
      "_id": {
        "title": "_id",
        "type": "string"
      }
    },
    "modify": {}
  },
  "displayMode": false,
  "lastUsed": [
    "b29999999999999999798765"
  ]
}
</div>
`;

exports[`DbStore Create Test: multi added but not yet loaded 1`] = `
<div>
  {
  "value": [
    "b29999999999999999498765",
    "b29999999999999999798765"
  ],
  "relatedObject": [
    {
      "guestName": "myText 4",
      "myVal": 424,
      "_id": "b29999999999999999498765"
    },
    {
      "guestName": "myText 7",
      "myVal": 427,
      "_id": "b29999999999999999798765"
    }
  ],
  "searchForm": {
    "title": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "properties": {
      "guestName": {
        "title": "guestName",
        "type": "string"
      },
      "_id": {
        "title": "_id",
        "type": "string"
      }
    },
    "modify": {}
  },
  "displayMode": false,
  "lastUsed": [
    "b29999999999999999798765"
  ]
}
</div>
`;

exports[`DbStore Create Test: multi load with none missing 1`] = `
<div>
  {
  "value": [
    "b29999999999999999398765",
    "b29999999999999999498765",
    "b29999999999999999598765"
  ],
  "relatedObject": [
    {
      "guestName": "myText 3",
      "myVal": 423,
      "_id": "b29999999999999999398765"
    },
    {
      "guestName": "myText 4",
      "myVal": 424,
      "_id": "b29999999999999999498765"
    },
    {
      "guestName": "myText 5",
      "myVal": 425,
      "_id": "b29999999999999999598765"
    }
  ],
  "searchForm": {
    "title": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "properties": {
      "guestName": {
        "title": "guestName",
        "type": "string"
      },
      "_id": {
        "title": "_id",
        "type": "string"
      }
    },
    "modify": {}
  }
}
</div>
`;

exports[`DbStore Create Test: multi load with one missing 1`] = `
<div>
  {
  "value": [
    "b29999999999999999398765",
    "b29999999999999999498765",
    "b29999999999999999598765"
  ],
  "relatedObject": [
    {
      "guestName": "myText 3",
      "myVal": 423,
      "_id": "b29999999999999999398765"
    },
    {
      "guestName": "myText 4",
      "myVal": 424,
      "_id": "b29999999999999999498765"
    },
    {
      "guestName": "myText 5",
      "myVal": 425,
      "_id": "b29999999999999999598765"
    }
  ],
  "searchForm": {
    "title": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "properties": {
      "guestName": {
        "title": "guestName",
        "type": "string"
      },
      "_id": {
        "title": "_id",
        "type": "string"
      }
    },
    "modify": {}
  }
}
</div>
`;

exports[`DbStore Create Test: multi removed one 1`] = `
<div>
  {
  "value": [
    "b29999999999999999398765",
    "b29999999999999999498765"
  ],
  "relatedObject": [
    {
      "guestName": "myText 3",
      "myVal": 423,
      "_id": "b29999999999999999398765"
    },
    {
      "guestName": "myText 4",
      "myVal": 424,
      "_id": "b29999999999999999498765"
    }
  ],
  "searchForm": {
    "title": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "properties": {
      "guestName": {
        "title": "guestName",
        "type": "string"
      },
      "_id": {
        "title": "_id",
        "type": "string"
      }
    },
    "modify": {}
  }
}
</div>
`;

exports[`DbStore Create Test: multi removed two 1`] = `
<div>
  {
  "value": [
    "b29999999999999999498765"
  ],
  "relatedObject": [
    {
      "guestName": "myText 4",
      "myVal": 424,
      "_id": "b29999999999999999498765"
    }
  ],
  "searchForm": {
    "title": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "properties": {
      "guestName": {
        "title": "guestName",
        "type": "string"
      },
      "_id": {
        "title": "_id",
        "type": "string"
      }
    },
    "modify": {}
  }
}
</div>
`;

exports[`DbStore Create Test: nothing set yet 1`] = `
<div>
  {
  "searchForm": {
    "title": "searchFor.ownedBy",
    "collection": "simpleTestCol",
    "properties": {
      "guestName": {
        "title": "guestName",
        "type": "string"
      },
      "_id": {
        "title": "_id",
        "type": "string"
      }
    },
    "modify": {}
  }
}
</div>
`;

exports[`DbStore Create Test: nothing yet 1`] = `
<div>
  {
  "searchForm": {
    "title": "searchFor.ownedBy",
    "collection": "simpleTestCol",
    "properties": {
      "guestName": {
        "title": "guestName",
        "type": "string"
      },
      "_id": {
        "title": "_id",
        "type": "string"
      }
    },
    "modify": {}
  },
  "prefix": "ownedBy"
}
</div>
`;

exports[`DbStore Create Test: set to first creation loaded 1`] = `
<div>
  {
  "value": "b29999999999999999198765",
  "relatedObject": {
    "guestName": "myText 1",
    "myVal": 421,
    "_id": "b29999999999999999198765"
  },
  "searchForm": {
    "title": "searchFor.ownedBy",
    "collection": "simpleTestCol",
    "properties": {
      "guestName": {
        "title": "guestName",
        "type": "string"
      },
      "_id": {
        "title": "_id",
        "type": "string"
      }
    },
    "modify": {}
  }
}
</div>
`;

exports[`DbStore Create Test: set to first creation not loaded yet 1`] = `
<div>
  {
  "value": "b29999999999999999098765",
  "relatedObject": {
    "guestName": "myText 0",
    "myVal": 420,
    "_id": "b29999999999999999098765"
  },
  "searchForm": {
    "title": "searchFor.ownedBy",
    "collection": "simpleTestCol",
    "properties": {
      "guestName": {
        "title": "guestName",
        "type": "string"
      },
      "_id": {
        "title": "_id",
        "type": "string"
      }
    },
    "modify": {}
  }
}
</div>
`;

exports[`DbStore Create Test: set to invalid value 1`] = `
<div>
  {
  "value": "INVALID",
  "searchForm": {
    "title": "searchFor.ownedBy",
    "collection": "simpleTestCol",
    "properties": {
      "guestName": {
        "title": "guestName",
        "type": "string"
      },
      "_id": {
        "title": "_id",
        "type": "string"
      }
    },
    "modify": {}
  }
}
</div>
`;

exports[`DbStore Create Test: single search for my 1`] = `
<div>
  {
  "searchForm": {
    "title": "searchFor.ownedBy",
    "collection": "simpleTestCol",
    "properties": {
      "guestName": {
        "title": "guestName",
        "type": "string"
      },
      "_id": {
        "title": "_id",
        "type": "string"
      }
    },
    "modify": {}
  },
  "prefix": "ownedBy"
}
</div>
`;
